# mwin

./: .envcopy  README.md
kubent/: .envcopy  README.md  config.toml  pyproject.toml
kubent/src/: config.py  env.py
kubent/src/agent/: base.py  events.py  kubent.py  robin.py  runner.py
kubent/src/agent/kubent/: __init__.py  kubent.py  system_prompt.py
kubent/src/agent/runtime/: __init__.py  context.py  (+1 more)
kubent/src/agent_api/: README.md  main.py
kubent/src/api/: background_task.py  guard.py  main.py
kubent/src/kubent_celery/: celery_app.py  tasks.py
kubent/src/repository/: kubent_chat.py  kubent_chat_session.py  project.py  step_meta.py  trace.py
kubent/src/sandbox/: README.md  __init__.py  client.py  core.py  manager.py
kubent/src/service/: chat.py
kubent/src/utils/: llm_context.py  mermaid.py
kubent/test/: README.md  conftest.py  test_config.py  test_env.py  test_guard.py  test_jwt.py  test_mermaid.py  test_response_model.py  test_runner.py
src/: README.md  pyproject.toml
src/docs/: version-log.md
src/mwin/: __init__.py  logger.py
src/mwin/client/: config.py  sync_client.py
src/mwin/config/: configurator.py  types.py
src/mwin/context/: __init__.py  runner.py  storage.py
src/mwin/helper/: args_helper.py  exception_helper.py  inspect_helper.py  prompt_helper.py
src/mwin/models/: __init__.py  common.py  key_models.py
src/mwin/patches/: llm_patch_config.py
src/mwin/prompt/: __init__.py  wrapper.py
src/mwin/track/: __init__.py  at_track.py  base.py  options.py
src/test/helper/: test_exception_helper.py  test_logger.py  test_prompt_wrapper.py
src/test/track/: README.md  conftest.py  test_track_auto_chat_completions.py  test_track_decorator_base.py  test_track_kimi_chat_completions.py  test_track_noop_in_pytest.py  test_track_openai_chat_completions.py  test_track_project_name.py
(+288 files in other folders)
