[project]
name = "kubent"
version = "0.1.0-beta"
description = "Kubent: offer an enterprise-level solution to improve agent system better."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "openai>=2.11.0",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
